--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson_02",
+  "name": "lesson_03",
   "version": "1.0.0",
   "description": "techNotes backend",
   "main": "server.js",
@@ -13,7 +13,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.3.5",
+    "mongoose-sequence": "^6.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
