--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson_04",
+  "name": "lesson_08",
   "version": "1.0.0",
   "description": "techNotes backend",
   "main": "server.js",
@@ -17,6 +17,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
     "mongoose-sequence": "^6.0.1",
     "uuid": "^9.0.1"
