--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lesson_08",
   "version": "1.0.0",
-  "description": "techNotes backend",
+  "description": "techNotes MERN Project (backend)",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server",
     "dev": "nodemon server"
   },
   "author": "",
