--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,3 +27,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# production
+/build
+
+# testing
+/coverage
